--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
     "sass": "^1.69.5"
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
