--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "react": "^18.2.0",
@@ -33,9 +34,9 @@
     "sass": "^1.69.5"
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
