--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.21.1",
     "sass": "^1.69.5"
