--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
     "@react-oauth/google": "^0.12.1",
     "aws-sdk": "^2.1542.0",
     "axios": "^1.6.3",
