--- a/package.json
+++ b/package.json
@@ -1,58 +1,61 @@
 {
-  "name": "free-inv",
-  "displayName": "Free INV",
-  "description": "An Inventory Application using React and TypeScript",
-  "license": "MIT",
-  "keywords": [
-    "home",
-    "inventory",
-    "organize",
-    "organization",
-    "react",
-    "typescript"
-  ],
-  "homepage": "",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/JCWoodworker/FreeINV.git"
-  },
-  "private": true,
-  "version": "0.0.1",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
-    "@react-oauth/google": "^0.12.1",
-    "aws-sdk": "^2.1542.0",
-    "axios": "^1.6.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-google-recaptcha": "^3.1.0",
-    "react-router-dom": "^6.21.1",
-    "sass": "^1.69.5"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@types/react-google-recaptcha": "^2.1.8",
-    "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "eslint": "^8.53.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0"
-  }
+	"name": "free-inv",
+	"displayName": "Free INV",
+	"description": "An Inventory Application using React and TypeScript",
+	"license": "MIT",
+	"keywords": [
+		"home",
+		"inventory",
+		"organize",
+		"organization",
+		"react",
+		"typescript"
+	],
+	"homepage": "",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/JCWoodworker/FreeINV.git"
+	},
+	"private": true,
+	"version": "0.0.1",
+	"type": "module",
+	"engines": {
+		"node": "20.x"
+	},
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.11.3",
+		"@emotion/styled": "^11.11.0",
+		"@fontsource/roboto": "^5.0.8",
+		"@mui/icons-material": "^5.15.10",
+		"@mui/material": "^5.15.10",
+		"@react-oauth/google": "^0.12.1",
+		"aws-sdk": "^2.1542.0",
+		"axios": "^1.6.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-dropzone": "^14.2.3",
+		"react-google-recaptcha": "^3.1.0",
+		"react-router-dom": "^6.21.1",
+		"sass": "^1.69.5"
+	},
+	"devDependencies": {
+		"@types/react": "^18.2.37",
+		"@types/react-dom": "^18.2.15",
+		"@types/react-google-recaptcha": "^2.1.8",
+		"@types/react-router-dom": "^5.3.3",
+		"@typescript-eslint/eslint-plugin": "^6.10.0",
+		"@typescript-eslint/parser": "^6.10.0",
+		"@vitejs/plugin-react": "^4.2.0",
+		"eslint": "^8.53.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.4",
+		"typescript": "^5.2.2",
+		"vite": "^5.0.0"
+	}
 }
