--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.11.3",
@@ -57,6 +58,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.4",
 		"typescript": "^5.2.2",
-		"vite": "^5.0.0"
+		"vite": "^5.0.0",
+		"vitest": "^1.4.0"
 	}
 }
