--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
-		"test": "vitest"
+		"test": "vitest",
+		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.11.3",
@@ -52,7 +53,7 @@
 		"@types/react-router-dom": "^5.3.3",
 		"@typescript-eslint/eslint-plugin": "^6.10.0",
 		"@typescript-eslint/parser": "^6.10.0",
-		"@vitejs/plugin-react": "^4.2.0",
+		"@vitest/coverage-v8": "^1.4.0",
 		"eslint": "^8.53.0",
 		"eslint-plugin-jsx-a11y": "^6.8.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
