--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
-		"test": "vitest",
+		"test": "vitest --reporter verbose",
 		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
@@ -53,13 +53,12 @@
 		"@types/react-router-dom": "^5.3.3",
 		"@typescript-eslint/eslint-plugin": "^6.10.0",
 		"@typescript-eslint/parser": "^6.10.0",
-		"@vitest/coverage-v8": "^1.4.0",
+		"@vitejs/plugin-react": "^4.2.1",
 		"eslint": "^8.53.0",
 		"eslint-plugin-jsx-a11y": "^6.8.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.4",
 		"typescript": "^5.2.2",
-		"vite": "^5.0.0",
-		"vitest": "^1.4.0"
+		"vite": "^5.0.0"
 	}
 }
