--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
-		"test": "jest",
+		"test": "vitest --reporter=verbose",
 		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
@@ -47,6 +47,9 @@
 		"sass": "^1.69.5"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^6.4.2",
+		"@testing-library/react": "^14.2.2",
+		"@testing-library/user-event": "^14.5.2",
 		"@types/react": "^18.2.37",
 		"@types/react-dom": "^18.2.15",
 		"@types/react-google-recaptcha": "^2.1.8",
@@ -54,11 +57,14 @@
 		"@typescript-eslint/eslint-plugin": "^6.10.0",
 		"@typescript-eslint/parser": "^6.10.0",
 		"@vitejs/plugin-react": "^4.2.1",
+		"@vitest/coverage-v8": "^1.4.0",
 		"eslint": "^8.53.0",
 		"eslint-plugin-jsx-a11y": "^6.8.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.4",
+		"jsdom": "^24.0.0",
 		"typescript": "^5.2.2",
-		"vite": "^5.0.0"
+		"vite": "^5.0.0",
+		"vitest": "^1.4.0"
 	}
 }
